# agent-pty

./: .gitignore  README.md  pyproject.toml
agent_pty/: __init__.py  bones.py  captains_log.py  cli.py  holodeck.py  io.py  keys.py  mcp.py  mesh.py  prime_directive.py  red_alert.py  schema.py  scotty.py  session.py  spock.py  sulu.py  transporter.py  uhura.py  wait.py  worf.py
docs/: bones-pattern.md  build-plan.md  captain-kirk-pattern.md  captains_log-pattern.md  elevator-pitch.md  executive-usage.md  holodeck-pattern.md  prime_directive-pattern.md  red_alert-pattern.md  scotty-pattern.md  spock-pattern.md  sulu-pattern.md  transporter-pattern.md  uhura-pattern.md  worf-pattern.md
examples/: captain_kirk.py  drive_python_repl.py  mcp_smoke.py
tests/: conftest.py  test_bones.py  test_captains_log.py  test_cli.py  test_holodeck.py  test_io.py  test_keys.py  test_mcp.py  test_mesh.py  test_prime_directive.py  test_red_alert.py  test_schema.py  test_scotty.py  test_session.py  test_spock.py  test_sulu.py  test_transporter.py  test_uhura.py  test_wait.py  test_worf.py
