[project]
name = "agent-pty"
version = "0.1.0"
description = "Persistent PTY tool for LLM coding agents, tmux-backed"
requires-python = ">=3.11"
dependencies = [
    "libtmux>=0.36",
]

[project.optional-dependencies]
dev = ["pytest>=8"]

[project.scripts]
agent-pty = "agent_pty.cli:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["agent_pty"]

[tool.pytest.ini_options]
testpaths = ["tests"]
